@@ -39,6 +39,10 @@
 
 	* alloc.h (TINO_FREE_NULL): now no more modifies errno
 
+2009-03-31  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* strprintf.h (tino_str_printf_buf, tino_str_vprintf_buf): added
+
 2009-03-24  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* scale.h (tino_scale_slew_avg): added
